--- a/Lesson_2/css/main.css
+++ b/Lesson_2/css/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Lato|Raleway');
+
 body{
   margin: 0px;
   padding: 0px;
@@ -13,7 +14,7 @@ body{
 }
 
 hr{
-  height: 2px;
+  height: 1px;
 }
 .header-picture{
   margin-left: 45%;
@@ -24,7 +25,8 @@ hr{
 ul{
   margin: 0px;
   padding-top: 5%;
-  padding-left: 30%;
+  display: flex;
+  justify-content: center;
 }
 
 ul.ul_menu li{
@@ -38,16 +40,28 @@ ul.ul_menu li{
   cursor: pointer;
   list-style-type: none;
 }
+ul.ul_menu li:first-child{
+  margin-left: 0px;
+  padding-left: 0px;
+
+}
+ul.ul_menu li:last-child{
+  margin-right: 0px;
+  padding-right: 0px;
+
+}
 .header h1{
+  display: flex;
+  justify-content: center;
   font-size: 82px;
   color: white;
-  padding-left: 25%;
   padding-top: 50px;
   margin-top: 50px;
 }
 
 .header_text{
-  display: inline-flex;
+  display: flex;
+  justify-content: center;
   width: 100%;
   padding-top: 1%;
 
@@ -63,29 +77,28 @@ ul.ul_menu li{
   width: 8%;
   float: right;
   margin: 0px;
-  margin-left: 40px;
+
 }
-.header_text hr:first-child{
-  float: left;
-  margin-left: 25%;
-  padding-left: 0px;
+.header_text hr:last-child{
+    margin-left: 40px;
+}
+.form-main-button{
+  display: flex;
+  justify-content: center;
 }
 .form-main-button button{
   margin-top: 8%;
   border: 0px;
-  padding: 0px;
   cursor:  pointer;
-  height: 80px;
-  width: 30%;
+  height: auto;
   font-weight: bold;
   font-size: 24px;
-  margin-left: 35%;
   color: #fff;
   text-transform: uppercase;
   background: #52C9B3;
   border-radius: 50px;
   margin-bottom: 10%;
-
+  padding: 2% 10% 2% 10%;
 }
 
 .form-main-button button:focus {
@@ -97,12 +110,17 @@ ul.ul_menu li{
   background-color: #EEEEEF;
 
 }
+.first_block{
+  display: flex;
+  justify-content: center;
+
+}
 .local_menu{
-  display: inline-block;
   width: 20%;
-  padding: 5%;
+  padding: 5% 4% 5% 4%;
   text-align: center;
 }
+
 .local_menu i{
   color:  white;
   font-size: 72px;
@@ -125,14 +143,17 @@ ul.ul_menu li{
   padding-left: 25px;
   margin-left: 20px;
 }
+.second_block{
+  display: flex;
+  justify-content: center;
+}
 .second_block, .four_block , .sixth_block{
   background-color: #F5F5F5;
 }
 
 .local2_menu{
-  display: inline-block;
   width: 30%;
-  padding: 5%;
+  padding: 5% ;
   text-align: left;
 }
 .local2_menu h4{
@@ -146,6 +167,7 @@ ul.ul_menu li{
 .second_block-picture{
   width: 100%;
 }
+
 .form-second_block-button button{
   margin-left: 0px;
   padding-left: 0px;
@@ -153,14 +175,16 @@ ul.ul_menu li{
   border: 0px;
   padding: 0px;
   cursor:  pointer;
-  height: 40px;
-  width: 30%;
+  height: auto;
+
   font-size: 15px;
   color: #fff;
   background: #50C3AF;
   border-radius: 20px;
   margin-bottom: 15px;
+  padding: 2.5% 12%;
 }
+
 .third_block{
   margin-left: 15%;
   width: 70%;
@@ -206,23 +230,28 @@ text-align: left;
   border: 0px;
   padding: 0px;
   cursor:  pointer;
-  height: 40px;
-  width: 15%;
+  height: auto;
+
   font-size: 15px;
   color: #fff;
   background: #a7a7a7;
   border-radius: 20px;
   margin-bottom: 5%;
+  padding: 1.5% 7%;
+}
+.four_block{
+  display: flex;
+  justify-content: center;
 }
 
 .local4_menu{
-  display: inline-block;
+
   width: 20%;
   padding-top: 5%;
   padding-bottom: 5%;
   text-align: left;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-left: 45px;
+  padding-right: 45px;
 }
 .local4_menu h4{
   font-size: 20px;
@@ -241,8 +270,12 @@ text-align: left;
   width: 100%;
 }
 
+.fifth_block{
+  display: flex;
+  justify-content: center;
+}
 .local5_menu{
-  display: inline-block;
+
   width: 30%;
   padding-top: 3%;
   padding-bottom: 5%;
@@ -276,18 +309,17 @@ text-align: left;
 }
 .sixth_block{
   display: flex;
+  justify-content: center;
 }
 .sixth_block img{
   float: left;
-  width: 20%;
+  width: 25%;
   height: 15%;
-  padding-top: 5%;
-  padding-left: 18%;
-  padding-bottom: 5%;
+  padding: 5% ;
 }
 
 .local6_menu{
-  float: left;
+
   width: 40%;
   height: 20%;
   padding-top: 5%;
@@ -308,44 +340,61 @@ text-align: left;
   border: 0px;
   padding: 0px;
   cursor:  pointer;
-  height: 60px;
-  width: 30%;
+  height: auto;
   font-size: 16px;
   color: #fff;
   background: #a7a7a7;
   border-radius: 20px;
   margin-bottom: 15px;
+  padding: 2.5% 12%;
 }
 .local6_menu h4{
-  float: left;
+  float: center;
   padding: 10px;
   margin: 10px;
   padding-top: 5%;
-  font-size: 24px;
+  font-size: 28px;
 }
 
 .footer{
   background-color: #50C3AF;
+  justify-content: center;
+}
+
+.footer_logo{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  margin-top: 5%;
 }
 
 .footer_logo img{
-  display: inline-block;
-  width: 10%;
-  height: auto;
-  padding-left: 5%;
+  width: 12.5%;
+  height: 10%;
+  padding: 0% 3%;
   padding-bottom: 5%;
 }
+.footer_logo img:last-child{
+  padding-top: 0px;
+}
+
 .top_footer{
-  padding-top: 2%;
+  display: flex;
+  justify-content: center;
+  padding-top: 5%;
   color: white;
 }
 .top_footer h5{
-  font-size: 20px;
+  font-size: 30px;
+  margin: 0;
+}
+.top_footer img{
+  width: 4%;
+  height: 4%;
+  margin-top: -1.2%;
 }
 
-.footer4_logo-picture{
-padding-top: 5%;
-}
 
 .bottom_footer{
   background-color: #F5F5F5;
@@ -374,7 +423,8 @@ padding-top: 5%;
 }
 
 .footer_icons img{
-
+  width: 75%;
+  height: 75%;
   margin-right: 20px;
 
 }
