--- a/Lesson_2/css/main.css
+++ b/Lesson_2/css/main.css
@@ -92,6 +92,7 @@ ul.ul_menu li:last-child{
 .form-main-button button{
   margin-top: 8%;
   border: 0px;
+
   cursor:  pointer;
   height: auto;
   font-weight: bold;
@@ -122,9 +123,13 @@ ul.ul_menu li:last-child{
   padding: 5% 4% 5% 4%;
   text-align: center;
 }
+.local_menu img{
+  width: 35%;
+  height: 25%;
+}
 .local_menu img:hover{
-  width: 30%;
-  height: 30%;
+  width: 35%;
+  height: 35%;
 }
 .local_menu h4{
   font-size: 22px;
@@ -202,15 +207,9 @@ ul.ul_menu li:last-child{
   padding: 10px;
   margin: 10px;
   padding-top: 5%;
-}
-.local3_menu i{
-  font-size: 24px;
-  color: #a7a7a7;
-  padding: 20px;
-}
-.local3_menu h4{
   font-size: 24px;
 }
+
 .local3_menu p{
   font-size: 17px;
   color: #656565;
@@ -308,9 +307,7 @@ text-align: left;
   padding-top: 5%;
   font-size: 20px;
 }
-.pancil_img{
-  margin-top: 20px;
-}
+
 .pancil_block-picture{
   margin-top: 5px;
 }
@@ -365,7 +362,7 @@ text-align: left;
   padding: 10px;
   margin: 10px;
   padding-top: 5%;
-  font-size: 28px;
+  font-size: 22px;
 }
 
 .footer{
@@ -445,5 +442,1025 @@ text-align: left;
   height: 80%;
   margin-right: 20px;
   background-color: #0db697;
+
+}
+@media (min-width:2001px) {
+  .header h1{
+    font-size: 100px;
+  }
+
+  ul.ul_menu li{
+    font-size: 28px;
+  }
+
+  .form-main-button button{
+    font-size: 30px;
+
+  }
+
+  .local_menu h4{
+    font-size: 30px;
+  }
+
+  .local_menu p{
+    font-size: 22px;
+    padding-left: 15%;
+    margin-left: 0px;
+  }
+
+  .local2_menu h4{
+    font-size: 32px;
+  }
+  .local2_menu p{
+    padding-top: 20px;
+    font-size: 24px;
+    width: 90%;
+  }
+
+  .form-second_block-button button{
+      font-size: 22px;
+    }
+
+  .local3_menu h4{
+    float: left;
+    padding: 10px;
+    margin: 10px;
+    padding-top: 5%;
+      font-size: 32px;
+  }
+
+  .local3_menu p{
+    font-size: 24px;
+
+  }
+
+  .form-third_block-button button{
+    font-size: 22px;
+  }
+  .local3_menu img{
+    padding-top: 5.5%;
+  }
+
+  .local4_menu h4{
+    font-size: 32px;
+  }
+  .local4_menu p{
+    font-size: 22px;
+  }
+  .local4_menu a{
+    font-size: 28px;
+  }
+
+  .local5_menu p{
+    font-size: 24px;
+  }
+  .local5_menu h4{
+    font-size: 32px;
+    margin-top: 0px;
+  }
+
+  .form-sixth_block-button button{
+    font-size: 28px;
+  }
+  .local6_menu p{
+    font-size: 26px;
+  }
+  .local6_menu h4{
+    font-size: 34px;
+  }
+
+  .top_footer h5{
+    font-size: 36px;
+  }
+
+  .bottom_footer h6{
+    font-size: 22px;
+
+  }
+  .bottom_footer p{
+    display: block;
+    font-size: 18px;
+  }
+
+}
+
+@media (min-width:1441px) and (max-width:2000px) {
+  .header h1{
+    font-size: 90px;
+  }
+
+  ul.ul_menu li{
+    font-size: 26px;
+  }
+
+  .form-main-button button{
+    font-size: 28px;
+
+  }
+
+  .local_menu h4{
+    font-size: 28px;
+  }
+
+  .local_menu p{
+    font-size: 20px;
+    padding-left: 15%;
+    margin-left: 0px;
+  }
+
+  .local2_menu h4{
+    font-size: 28px;
+  }
+  .local2_menu p{
+    padding-top: 20px;
+    font-size: 22px;
+    width: 80%;
+  }
+
+  .form-second_block-button button{
+      font-size: 20px;
+    }
+
+  .local3_menu h4{
+    padding-top: 5%;
+      font-size: 28px;
+  }
+
+  .local3_menu p{
+    font-size: 22px;
+
+  }
+
+  .form-third_block-button button{
+    font-size: 20px;
+  }
+  .local3_menu img{
+    padding-top: 5.5%;
+  }
+
+  .local4_menu h4{
+    font-size: 26px;
+  }
+  .local4_menu p{
+    font-size: 20px;
+  }
+  .local4_menu a{
+    font-size: 26px;
+  }
+
+  .local5_menu p{
+    font-size: 22px;
+  }
+  .local5_menu h4{
+    font-size: 28px;
+    margin-top: 0px;
+  }
+
+  .form-sixth_block-button button{
+    font-size: 26px;
+  }
+  .local6_menu p{
+    font-size: 24px;
+  }
+  .local6_menu h4{
+    font-size: 26px;
+  }
+
+  .top_footer h5{
+    font-size: 22px;
+  }
+
+  .bottom_footer h6{
+    font-size: 20px;
+
+  }
+  .bottom_footer p{
+    display: block;
+    font-size: 16px;
+  }
+
+}
+
+@media (min-width:1024px) and (max-width:1250px) {
+
+  .header-picture{
+    margin-top: 4%;
+  }
+
+  ul.ul_menu li{
+    font-size: 18px;
+  }
+
+  .header h1{
+    font-size: 68px;
+    margin-top: 0px;
+  }
+
+  .form-main-button button{
+    margin-top: 7%;
+    font-size: 22px;
+    margin-bottom: 8%;
+    padding: 2% 10% ;
+  }
+
+  .local_menu h4{
+    font-size: 20px;
+  }
+
+  .local_menu p{
+    font-size: 15px;
+    margin-bottom: 20px;
+    margin-left: 0px;
+  }
+
+  .local2_menu h4{
+    font-size: 20px;
+  }
+  .local2_menu p{
+    font-size: 15px;
+  }
+
+  .form-second_block-button button{
+    font-size: 14px;
+  }
+
+  .local3_menu img{
+    padding-top: 5%;
+    margin-top: 0px;
+    width: 7%;
+    height: 7%;
+
+  }
+  .local3_menu h4{
+    padding-top: 4.4%;
+    font-size: 20px;
+  }
+
+  .local3_menu p{
+    font-size: 16px;
+  }
+
+  .form-third_block-button button{
+    font-size: 14px;
+  }
+
+  .local4_menu{
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .fifth_block{
+    display: flex;
+    justify-content: center;
+  }
+
+  .local5_menu p{
+    padding-top: 15px;
+    font-size: 16px;
+  }
+
+  .form-sixth_block-button button{
+    font-size: 15px;
+    }
+
+  .local6_menu h4{
+    font-size: 20px;
+  }
+
+  .top_footer h5{
+    font-size: 22px;
+  }
+
+  .bottom_footer h6{
+    font-size: 15px;
+  }
+
+}
+
+@media (min-width:768px) and (max-width:1023px) {
+
+  .header-picture{
+    margin-top: 4%;
+  }
+  ul{
+    padding-top: 4%;
+  }
+
+  ul.ul_menu li{
+    padding-left: 15px;
+    padding-right: 15px;
+    font-size: 17px;
+  }
+
+  .header h1{
+    font-size: 56px;
+    padding-top: 40px;
+    margin-top: 0px;
+  }
+
+  .header_text p{
+    font-size: 22px;
+  }
+
+  .form-main-button button{
+    margin-top: 6%;
+    font-size: 20px;
+  }
+
+  .local_menu h4{
+    font-size: 18px;
+  }
+
+  .local_menu p{
+    font-size: 15px;
+    margin-bottom: 10px;
+    padding-bottom: 15px;
+    width: 80%;
+    padding-left: 10px;
+    margin-left: 10px;
+  }
+
+  .local2_menu h4{
+    font-size: 18px;
+  }
+  .local2_menu p{
+    font-size: 15px;
+    width: 100%;
+  }
+
+  .local3_menu img{
+    padding-top: 5%;
+    width: 9%;
+    height: 9%;
+  }
+  .local3_menu h4{
+    margin-left: 0px;
+    font-size: 18px;
+  }
+
+  .local3_menu p{
+    font-size: 15px;
+  }
+
+  .local4_menu{
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+  .local4_menu h4{
+    font-size: 18px;
+    padding-top: 15px;
+  }
+  .local4_menu p{
+    padding-top: 15px;
+    font-size: 15px;
+    width: 100%;
+  }
+
+  .local5_menu p{
+    padding-top: 15px;
+    font-size: 15px;
+  }
+  .local5_menu img{
+    width: 15%;
+    height: 15%;
+    margin-top: 3px;
+  }
+  .local5_menu h4{
+    font-size: 18px;
+    padding-left: 0px;
+  }
+
+  .sixth_block img{
+    float: left;
+    width: 25%;
+    height: 15%;
+    padding: 5% ;
+  }
+
+  .local6_menu{
+
+    width: 40%;
+    height: 20%;
+    padding-top: 5%;
+    padding-left: 20px;
+    margin-left: 20px;
+    padding-bottom: 5%;
+    text-align: left;
+  }
+  .sixth_block-picture{
+    width: 100%;
+  }
+
+  .local6_menu h4{
+    float: center;
+    padding: 10px;
+    margin: 10px;
+    margin-top: 0px;
+    padding-top: 0px;
+    margin-top: 0px;
+    padding-top: 0px;
+    padding-top: 0%;
+    font-size: 18px;
+  }
+
+  .footer_logo{
+    margin-top: 5%;
+  }
+
+  .footer_logo img{
+    width: 12.5%;
+    height: 10%;
+    padding: 0% 3%;
+    padding-bottom: 5%;
+  }
+
+  .top_footer h5{
+    font-size: 20px;
+  }
+}
+
+@media (min-width:425px) and (max-width:767px) {
+
+  .header-picture{
+    margin-top: 3%;
+    width: 15%;
+  }
+  ul{
+    padding-top: 3%;
+  }
+
+  ul.ul_menu li{
+    margin-left: 5px;
+    padding-left: 5px;
+    margin-right: 5px;
+    padding-right: 5px;
+    font-size: 15px;
+
+  }
+
+  .header h1{
+    display: flex;
+    justify-content: center;
+    font-size: 36px;
+    padding-top: 5px;
+    margin-top: 10px;
+  }
+
+  .header_text{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding-top: 1%;
+
+  }
+  .header_text p{
+    font-size: 14px;
+    color: white;
+    margin-top: -8px;
+    padding-left: 10px;
+    margin-left: 10px;
+  }
+  .header_text hr{
+    width: 8%;
+    float: right;
+    margin: 0px;
+
+  }
+
+  .form-main-button button{
+    margin-top: 6%;
+    font-size: 17px;
+    margin-bottom: 8%;
+  }
+
+  .first_block{
+    display: flex;
+    justify-content: space-around;
+  }
+  .local_menu{
+    width: 25%;
+    padding: 5% 2% 5% 2%;
+    text-align: center;
+  }
+  .local_menu img{
+    width: 40%;
+    height: 20%;
+  }
+
+  .local_menu h4{
+    font-size: 14px;
+  }
+
+  .local_menu p{
+    font-size: 12px;
+    margin-bottom: 5px;
+    padding-bottom: 5px;
+    width: 100%;
+    padding-left: 0px;
+    margin-left: 0px;
+  }
+  .second_block{
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .local2_menu{
+    width: 40%;
+    padding: 5% ;
+    text-align: left;
+  }
+  .local2_menu h4{
+    font-size: 14px;
+  }
+  .local2_menu p{
+    padding-top: 10px;
+    font-size: 12px;
+    width: 100%;
+  }
+
+  .third_block{
+    margin-left: 5%;
+    width: 90%;
+  }
+
+  .local3_menu img{
+    float: left;
+    padding-top: 5%;
+    margin-top: 0px;
+    width: 10%;
+    height: 10%;
+
+  }
+  .local3_menu h4{
+    float: left;
+    padding: 10px;
+    margin: 10px;
+    margin-left: 5px;
+    padding-left: 0px;
+    padding-top: 4.5%;
+    font-size: 14px;
+  }
+
+  .local3_menu p{
+    font-size: 12px;
+  }
+
+  .form-third_block-button button{
+    margin-top: 10px;;
+    font-size: 13px;
+    border-radius: 20px;
+    margin-bottom: 5%;
+    padding: 1.3% 7%;
+  }
+
+  .four_block{
+    display: flex;
+    justify-content:space-around;
+  }
+
+  .local4_menu{
+
+    width: 25%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+  .local4_menu h4{
+    font-size: 14px;
+    padding-top: 0px;
+  }
+  .local4_menu p{
+    padding-top: 5px;
+    font-size: 12px;
+    width: 100%;
+  }
+  .Check_this_out{
+    font-size: 14px;
+  }
+
+  .fifth_block{
+    display: flex;
+    justify-content: space-around;
+  }
+  .local5_menu{
+    width: 40%;
+    padding-top: 3%;
+    padding-bottom: 5%;
+    text-align: left;
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+
+  .local5_menu p{
+    padding-top: 0px;
+    font-size: 12px;
+  }
+  .local5_menu img{
+  display: none;
+
+  }
+  .local5_menu h4{
+
+    padding: 10px;
+    margin: 10px;
+    padding-top: 5%;
+    font-size: 14px;
+  }
+
+  .pancil_block-picture{
+    margin-top: 5px;
+  }
+  .sixth_block{
+    display: flex;
+    justify-content: space-around;
+  }
+  .sixth_block img{
+    float: left;
+    width: 25%;
+    height: 15%;
+    padding: 5% 0%;
+  }
+
+  .local6_menu{
+
+    width: 50%;
+    height: 20%;
+    padding-top: 3%;
+    padding-left: 5px;
+    margin-left: 5px;
+    padding-bottom: 5%;
+    text-align: left;
+  }
+
+  .sixth_block-picture{
+    width: 100%;
+  }
+  .local6_menu p{
+    font-size: 12px;
+  }
+  .form-sixth_block-button button{
+    font-size: 15px;
+  }
+
+  .local6_menu h4{
+    float: center;
+    padding: 10px 0px;
+    margin: 10px 0px;
+    padding-top: 0%;
+    font-size: 14px;
+  }
+
+  .footer{
+    justify-content: space-around;
+  }
+
+  .footer_logo{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    margin-top: 5%;
+  }
+
+  .footer_logo img{
+    width: 12.5%;
+    height: 10%;
+    padding: 0% 3%;
+    padding-bottom: 5%;
+  }
+
+  .top_footer{
+    display: flex;
+    justify-content: center;
+    padding-top: 5%;
+    color: white;
+  }
+  .top_footer h5{
+    font-size: 18px;
+    margin: 0;
+  }
+  .top_footer img{
+display: none;
+  }
+
+  .bottom_footer{
+    background-color: #F5F5F5;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    display: flex;
+    justify-content: space-around;
+  }
+  .bottom_footer h6{
+    margin: 0;
+    font-size: 14px;
+    padding-right: 10px;
+  }
+  .bottom_footer p{
+    display: block;
+    font-size: 12px;
+  }
+
+  .footer_icons img{
+    width: 70%;
+    height: 70%;
+    margin-right: 20px;
+
+  }
+
+}
+
+@media (max-width:424px) {
+  .header-picture{
+    margin-top: 3%;
+    width: 15%;
+  }
+  ul{
+    padding-top: 3%;
+  }
+
+  ul.ul_menu li{
+    margin-left: 5px;
+    padding-left: 5px;
+    margin-right: 5px;
+    padding-right: 5px;
+    font-size: 14px;
+  }
+
+  .header h1{
+    display: flex;
+    justify-content: center;
+    font-size: 32px;
+    padding-top: 5px;
+    margin-top: 10px;
+  }
+
+  .header_text{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding-top: 1%;
+
+  }
+  .header_text p{
+    font-size: 14px;
+    color: white;
+    margin-top: -8px;
+    padding-left: 5px;
+    margin-left: 5px;
+  }
+  .header_text hr{
+    width: 8%;
+    float: right;
+    margin: 0px;
+  }
+  .header_text hr:last-child{
+    width: 8%;
+    float: right;
+    margin-left: 10px;
+  }
+  .form-main-button button{
+    margin-top: 6%;
+    font-size: 17px;
+    margin-bottom: 8%;
+  }
+
+  .first_block{
+    display: flex;
+    justify-content: space-around;
+  }
+  .local_menu{
+    width: 25%;
+    padding: 5% 2% 5% 2%;
+    text-align: center;
+  }
+  .local_menu img{
+    width: 40%;
+    height: 20%;
+  }
+
+  .local_menu h4{
+    font-size: 14px;
+  }
+
+  .local_menu p{
+    font-size: 12px;
+    margin-bottom: 5px;
+    padding-bottom: 5px;
+    width: 100%;
+    padding-left: 0px;
+    margin-left: 0px;
+  }
+  .second_block{
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .local2_menu{
+    width: 40%;
+    padding: 5% ;
+    text-align: left;
+  }
+  .local2_menu h4{
+    font-size: 14px;
+  }
+  .local2_menu p{
+    padding-top: 10px;
+    font-size: 12px;
+    width: 100%;
+  }
+
+  .third_block{
+    margin-left: 5%;
+    width: 90%;
+  }
+
+  .local3_menu img{
+    float: left;
+    padding-top: 5%;
+    margin-top: 0px;
+    width: 10%;
+    height: 10%;
+
+  }
+  .local3_menu h4{
+    float: left;
+    padding: 10px;
+    margin: 10px;
+    margin-left: 5px;
+    padding-left: 0px;
+    padding-top: 4.5%;
+    font-size: 14px;
+  }
+
+  .local3_menu p{
+    font-size: 12px;
+  }
+
+  .form-third_block-button button{
+    margin-top: 10px;;
+    font-size: 13px;
+    border-radius: 20px;
+    margin-bottom: 5%;
+    padding: 1.3% 7%;
+  }
+
+  .four_block{
+    display: flex;
+    justify-content:space-around;
+  }
+
+  .local4_menu{
+
+    width: 25%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+  .local4_menu h4{
+    font-size: 14px;
+    padding-top: 0px;
+  }
+  .local4_menu p{
+    padding-top: 5px;
+    font-size: 12px;
+    width: 100%;
+  }
+  .Check_this_out{
+    font-size: 12px;
+  }
+
+  .fifth_block{
+    display: flex;
+    justify-content: space-around;
+  }
+  .local5_menu{
+    width: 40%;
+    padding-top: 3%;
+    padding-bottom: 5%;
+    text-align: left;
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+
+  .local5_menu p{
+    padding-top: 0px;
+    font-size: 12px;
+  }
+  .local5_menu img{
+  display: none;
+
+  }
+  .local5_menu h4{
+
+    padding: 10px 0px;
+    margin: 10px 0px;
+    padding-top: 5%;
+    font-size: 14px;
+  }
+
+  .pancil_block-picture{
+    margin-top: 5px;
+  }
+  .sixth_block{
+    display: flex;
+    justify-content: space-around;
+  }
+  .sixth_block img{
+    float: left;
+    width: 25%;
+    height: 15%;
+    padding: 5% 0%;
+  }
+
+  .local6_menu{
+
+    width: 50%;
+    height: 20%;
+    padding-top: 3%;
+    padding-left: 5px;
+    margin-left: 5px;
+    padding-bottom: 5%;
+    text-align: left;
+  }
+
+  .sixth_block-picture{
+    width: 100%;
+  }
+  .local6_menu p{
+    font-size: 12px;
+  }
+  .form-sixth_block-button button{
+    font-size: 15px;
+  }
+
+  .local6_menu h4{
+    float: center;
+    padding: 10px 0px;
+    margin: 10px 0px;
+    padding-top: 0%;
+    font-size: 14px;
+  }
+
+  .footer{
+    justify-content: space-around;
+  }
+
+  .footer_logo{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    margin-top: 5%;
+  }
+
+  .footer_logo img{
+    width: 12.5%;
+    height: 10%;
+    padding: 0% 3%;
+    padding-bottom: 5%;
+  }
+
+  .top_footer{
+    display: flex;
+    justify-content: center;
+    padding-top: 5%;
+    color: white;
+  }
+  .top_footer h5{
+    font-size: 15px;
+    margin: 0;
+  }
+  .top_footer img{
+display: none;
+  }
+
+  .bottom_footer{
+    background-color: #F5F5F5;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    display: flex;
+    justify-content: space-around;
+  }
+  .bottom_footer h6{
+    margin: 0;
+    font-size: 12px;
+    padding-right: 10px;
+  }
+  .bottom_footer p{
+    display: block;
+
+  }
+.left_bootom_footer{
+  font-size: 10px;
+}
+  .footer_icons img{
+    width: 50%;
+    height: 50%;
+    margin-right: 20px;
+
+  }
+
 
 }
