--- a/Lesson_4/css/main.css
+++ b/Lesson_4/css/main.css
@@ -5,6 +5,17 @@ body{
   font-family: "Open Sans";
   font-size: 16px;
 }
+.wrapper_b{
+    width: 80%;
+	  max-width: 1200px;
+	  margin: 0 auto;
+}
+.flex_container {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	flex-direction: column;
+}
   .top_container{
     width: 100%;
     background-color: #1D2126;
@@ -87,11 +98,12 @@ body{
 }
 .banner{
   background: url(../img/header.png);
+  background-repeat: no-repeat;
   background-size: 100%;
-  height: 660px;
   margin-top: -1px;
-  display: flex;
-  justify-content: center;
+
+
+
 }
 
 h3{
@@ -112,13 +124,15 @@ p{
 }
 .banner p{
   color: #CCD0D7;
-  width: 656px;
+
   padding-top: 32px;
   padding-bottom: 46px;
 }
 .banner_content{
-  padding-top: 226px;
-  width: 1200px;
+  padding: 18% 0 24%;
+	width: 65%;
+	margin: 0 0;
+
 }
 
 .form-main-button button{
