--- a/Lesson_4/css/main.css
+++ b/Lesson_4/css/main.css
@@ -21,8 +21,8 @@ body{
 
 .top_container{
   width: 100%;
-  background-color: #1D2126;
   height: 81px;
+  background-color: #1D2126;
   display: flex;
   justify-content: center;
   }
@@ -65,7 +65,7 @@ body{
 
   .ul_menu li{
     padding: 8px 10px;
-    font-size: 13px;
+    font-size: 14px;
     cursor: pointer;
     margin-right: 16px;
     border: 2px solid transparent;
@@ -81,7 +81,7 @@ body{
   }
 
   ul.ul_menu li:first-child{
-    margin-right: 28px;
+    margin-right: 22px;
   }
 
   ul.ul_menu li:first-child a{
@@ -121,8 +121,6 @@ body{
   background-attachment: fixed;
   background-size: cover;
   width: 100%;
-  margin-top: -1px;
-
 }
 
 h3{
@@ -154,7 +152,7 @@ p{
 }
 
 .banner_content{
-  padding: 223px 0 250px;
+  padding: 220px 0 250px;
 	max-width: 653px;
 	margin: 0 0;
 }
@@ -169,7 +167,7 @@ p{
   background-color: inherit;
   border-radius: 4px;
   border: 2px solid #FFFFFF;
-  padding: 14px 28px 13px 20px;
+  padding: 14px 26px 13px 20px;
   margin-right: 8px;
 }
 
@@ -222,7 +220,7 @@ p{
 .right_text_box{
   width: 38.17%;
   margin-left: 30px;
-  margin-bottom: 90px;
+  margin-bottom: 106px;
   margin-top: 10px;
 }
 
@@ -259,7 +257,8 @@ p{
 
 .content_right_text_block p{
   margin-top: 10px;
-  margin-bottom: 30px;
+  margin-bottom: 25px;
+
 }
 
 .content_right_text_block h5{
@@ -317,7 +316,8 @@ hr{
 
 .horisontal_grey_box h6{
   padding-top: 20px;
-  margin-left: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
   font-family: "Quattrocento Sans";
   font-size: 16px;
   font-weight: bold;
@@ -325,7 +325,8 @@ hr{
 
 .horisontal_grey_box p{
   padding-bottom: 20px;
-  margin-left: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
   font-size: 14px;
   color: #8D8F92;
   cursor: pointer;
@@ -344,11 +345,11 @@ hr{
 }
 
 .content_second{
-  padding-bottom: 100px;
+  padding-bottom: 97px;
 }
 
 .center_second .main_headline{
-  padding-bottom: 55px;
+  padding-bottom: 57px;
 }
 .people_photo:hover .social_icons_2{
   position:absolute;
@@ -422,7 +423,7 @@ hr{
 .content_third form{
   display: flex;
   justify-content: center;
-  margin-bottom: 60px;
+  margin-bottom: 61px;
 }
 
 .lovely_photo img{
@@ -481,7 +482,7 @@ hr{
 
 .content {
   text-align: center;
-  padding-top: 30px;
+  padding-top: 29px;
 }
 
 .content_fourth .main_headline{
@@ -526,7 +527,7 @@ hr{
 }
 
 .text_to_nature_photo h6{
-  padding-top: 45px;
+  padding-top: 48px;
   font-size: 18px;
   color: #FFF;
   font-family: "Quattrocento Sans";
@@ -561,7 +562,7 @@ hr{
 
 .content_sixth .main_headline{
   padding-top: 65px;
-  padding-bottom: 55px;
+  padding-bottom: 54px;
 }
 
 .map{
@@ -573,7 +574,8 @@ hr{
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 30px;
-  padding-bottom: 5em;
+  grid-column-gap: 27px;
+  padding-bottom: 84px;
 }
 
 .text_to_sixth_block h5{
@@ -657,7 +659,7 @@ textarea{
   background-color: #23B7A4;
   border-radius: 4px;
   border: 2px solid #23B7A4;
-  padding: 12px 22px 8px 20px;
+  padding: 13px 22px 5px 20px;
   margin-right: 10px;
 }
 
